css/main.css
/* ... */
.widget li {
  list-style: square;
  color: #555555;
}
.widget .social-widget a {
  padding-right: 1em;
}
.media .media-object {
  width: 38px;
  height: auto;
}
.media .media-body p {
  margin-bottom: 0;
}
.media .media-body em {
  font-style: italic;
}
.featured-thumbnail,
.flexslider-thumb {
  border: 0;
  padding: 0;
  width: auto;
  max-width: 100%;
}
/******** Slider  ********/
.flex-caption {
  font-size: 20px;
  line-height: 1.5em;
  background: white;
  font-family: 'open_sanssemibold', sans-serif;
  -ms-word-wrap: break-word;
  -ms-word-break: break-all;
  word-wrap: break-word;
  word-break: break-all;
}
/******** Masonry Default/ 2 column layout  ********/
.layout-default .item,
.layout-2c-r .item,
.layout-default .item:before,
.layout-2c-r .item:before,
.layout-default .item:after,
.layout-2c-r .item:after {
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}
.layout-default .content,
.layout-2c-r .content {
  overflow: hidden;
}
.layout-default .item,
.layout-2c-r .item {
  margin: 0 1.5% 3em;
  width: 47%;
  margin-bottom: 48px\0;
}
/******** Masonry 1 column/ fullwidth layout  ********/
.layout-1c .item,
.layout-1c .item:before,
.layout-1c .item:after {
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}
.layout-1c .content {
  overflow: hidden;
}
.layout-1c .item {
  margin: 0 1.65% 3em;
  width: 30%;
  margin-bottom: 48px\0;
}
.layout-1c .single-content .title {
  padding: 1em 4.9em 0 4.9em;
}
.layout-1c .single-content .entry-content {
  padding: 0 8em;
}
.layout-1c .single-entry-meta {
  padding: 1em 11.5em;
}
.layout-1c .comment-area {
  padding: 1em 8em;
}
/*** Hack for firefox column-break-inside ***/
@-moz-document url-prefix() {
  
}
.item {
  background: #ffffff;
  border: 1px solid #ededed;
  margin-bottom: 3em;
}
.item figure img {
  max-width: 100%;
  width: 100%;
  height: auto;
  transition: opacity 0.25s ease-in-out;
  -moz-transition: opacity 0.25s ease-in-out;
  -webkit-transition: opacity 0.25s ease-in-out;
}
.item h2 {
  margin: 0;
  font-size: 17px;
  line-height: 25px;
  margin-top: 1em;
  padding: 0 1em 0 1em;
  font-family: 'open_sanssemibold', sans-serif;
  font-weight: 500;
}
.item h2 a {
  color: #333333;
}
.item h2 a:hover {
  color: #3498db;
}
.item .entry-meta {
  padding-bottom: 1em;
}
.item .entry-summary,
.item .entry-meta {
  padding: 13px 1.2em;
}
.item p {
  margin: 0;
  font-size: 13px;
  line-height: 22px;
}
.item p.article-meta-extra {
  padding-bottom: 1em;
  font-size: 11px;
}
.item blockquote {
  margin-top: 0;
}
.item.sticky {
  background: floralwhite;
}
.error {
  width: 100%;
}
.error h1 {
  margin: 0;
  font-size: 17px;
  line-height: 25px;
  margin-top: 1em;
  padding: 0 1em 0 1em;
  font-weight: 500;
}
/***  Query post styling  ***/
section[id*="query-post"] {
  background: transparent;
  padding: 0;
  border: 0;
}
section[id*="query-post"] .widget-title {
  font-family: 'droid_serifregular', serif;
  text-transform: none;
  margin-bottom: 1em;
}
section[id*="query-post"] .widget {
  background: transparent;
}
.query-widget-sidebar {
  background: #ffffff;
  border: 1px solid #ededed;
  margin-bottom: 3em;
  width: 100%;
}
.query-widget-sidebar figure img {
  max-width: 100%;
  width: 100%;
  height: auto;
  transition: opacity 0.25s ease-in-out;
  -moz-transition: opacity 0.25s ease-in-out;
  -webkit-transition: opacity 0.25s ease-in-out;
}
.query-widget-sidebar h2 {
  margin: 0;
  font-size: 17px;
  line-height: 25px;
  margin-top: 1em;
  padding: 0 1em 0 1em;
  font-family: 'open_sanssemibold', sans-serif;
  font-weight: 500;
}
.query-widget-sidebar h2 a {
  color: #333333;
}
.query-widget-sidebar h2 a:hover {
  color: #3498db;
}
.query-widget-sidebar .entry-meta {
  padding-bottom: 1em;
}
.query-widget-sidebar .entry-summary,
.query-widget-sidebar .entry-meta {
  padding: 13px 1.2em;
}
.query-widget-sidebar p {
  margin: 0;
  font-size: 13px;
  line-height: 22px;
}
.query-widget-sidebar p.article-meta-extra {
  padding-bottom: 1em;
  font-size: 11px;
}
.query-widget-sidebar blockquote {
  margin-top: 0;
}
.query-widget-sidebar.sticky {
  background: floralwhite;
}
.query-widget-sidebar p {
  padding: 0 1em 1em 1em;
}
.query-widget-sidebar .entry-title {
  font-family: 'open_sanssemibold', sans-serif;
  margin: 0;
  font-size: 17px;
  line-height: 25px;
  margin-top: 1em;
  padding: 0 1em 0 0.8em;
  font-weight: 500;
}
.query-widget-sidebar .entry-title a {
  color: #333333;
}
.query-widget-sidebar .entry-title a:hover {
  color: #3498db;
}
.query-widget-sidebar .thumbnail {
  padding: 0;
  margin: 0;
  border: 0;
  width: 100%;
  height: auto;
}
.query-widget-sidebar .byline,
.query-widget-sidebar .entry-meta {
  font-size: 11px;
  padding-left: 1.3em;
}
.query-widget-sidebar .byline .category:before,
.query-widget-sidebar .entry-meta .category:before {
  content: '\f301';
  display: inline-block;
  -webkit-font-smoothing: antialiased;
  font: normal 16px/1 'Genericons';
  vertical-align: middle;
  margin-right: 5px;
  margin-top: -3px;
}
.query-widget-sidebar .byline .category .before,
.query-widget-sidebar .entry-meta .category .before {
  display: none;
}
.query-widget-sidebar .byline .tag:before,
.query-widget-sidebar .entry-meta .tag:before {
  content: '\f302';
  display: inline-block;
  -webkit-font-smoothing: antialiased;
  font: normal 16px/1 'Genericons';
  vertical-align: middle;
  margin-right: 5px;
  margin-top: -3px;
}
.query-widget-sidebar .byline .tag .before,
.query-widget-sidebar .entry-meta .tag .before {
  display: none;
}
.loop-meta {
  margin-bottom: 2em;
  padding-left: 1em;
}
.loop-meta .loop-title {
  line-height: 1.5em;
  font-family: 'open_sanssemibold', sans-serif;
  -ms-word-wrap: break-word;
  -ms-word-break: break-all;
  word-wrap: break-word;
  word-break: break-all;
}
.pagination {
  margin-top: 1em;
  margin-bottom: 3em;
  text-align: center;
  line-height: 3em;
}
/* ... */

